# node/web-demo/src/api/hooks/useGetDatabaseSuspense.ts
@@ -1,0 +1,103 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import fetch from "@/lib/client";
+import type {
+  GetDatabaseQueryResponse,
+  GetDatabasePathParams,
+  GetDatabase404,
+} from "../types.ts";
+import type { RequestConfig, ResponseErrorConfig } from "@/lib/client";
+import type {
+  QueryKey,
+  QueryClient,
+  UseSuspenseQueryOptions,
+  UseSuspenseQueryResult,
+} from "@tanstack/react-query";
+import { queryOptions, useSuspenseQuery } from "@tanstack/react-query";
+
+export const getDatabaseSuspenseQueryKey = (id: GetDatabasePathParams["id"]) =>
+  [{ url: "/databases/:id", params: { id: id } }] as const;
+
+export type GetDatabaseSuspenseQueryKey = ReturnType<
+  typeof getDatabaseSuspenseQueryKey
+>;
+
+/**
+ * {@link /databases/:id}
+ */
+export async function getDatabaseSuspense(
+  id: GetDatabasePathParams["id"],
+  config: Partial<RequestConfig> & { client?: typeof fetch } = {},
+) {
+  const { client: request = fetch, ...requestConfig } = config;
+
+  const res = await request<
+    GetDatabaseQueryResponse,
+    ResponseErrorConfig<GetDatabase404>,
+    unknown
+  >({ method: "GET", url: `/databases/${id}`, ...requestConfig });
+  return res.data;
+}
+
+export function getDatabaseSuspenseQueryOptions(
+  id: GetDatabasePathParams["id"],
+  config: Partial<RequestConfig> & { client?: typeof fetch } = {},
+) {
+  const queryKey = getDatabaseSuspenseQueryKey(id);
+  return queryOptions<
+    GetDatabaseQueryResponse,
+    ResponseErrorConfig<GetDatabase404>,
+    GetDatabaseQueryResponse,
+    typeof queryKey
+  >({
+    enabled: !!id,
+    queryKey,
+    queryFn: async ({ signal }) => {
+      config.signal = signal;
+      return getDatabaseSuspense(id, config);
+    },
+  });
+}
+
+/**
+ * {@link /databases/:id}
+ */
+export function useGetDatabaseSuspense<
+  TData = GetDatabaseQueryResponse,
+  TQueryKey extends QueryKey = GetDatabaseSuspenseQueryKey,
+>(
+  id: GetDatabasePathParams["id"],
+  options: {
+    query?: Partial<
+      UseSuspenseQueryOptions<
+        GetDatabaseQueryResponse,
+        ResponseErrorConfig<GetDatabase404>,
+        TData,
+        TQueryKey
+      >
+    > & { client?: QueryClient };
+    client?: Partial<RequestConfig> & { client?: typeof fetch };
+  } = {},
+) {
+  const { query: queryConfig = {}, client: config = {} } = options ?? {};
+  const { client: queryClient, ...queryOptions } = queryConfig;
+  const queryKey = queryOptions?.queryKey ?? getDatabaseSuspenseQueryKey(id);
+
+  const query = useSuspenseQuery(
+    {
+      ...getDatabaseSuspenseQueryOptions(id, config),
+      queryKey,
+      ...queryOptions,
+    } as unknown as UseSuspenseQueryOptions,
+    queryClient,
+  ) as UseSuspenseQueryResult<TData, ResponseErrorConfig<GetDatabase404>> & {
+    queryKey: TQueryKey;
+  };
+
+  query.queryKey = queryKey as TQueryKey;
+
+  return query;
+}
